syntax = "proto3";


import "google/api/annotations.proto";

service Airing {
  rpc GetAiring (GetAiringMessage) returns (AiringResponse) {
    option (google.api.http) = {
      get: "/v1/rest/airing/{airing_id}"
    };
  }
}
message GetAiringMessage {
  string airing_id = 1;
}
message AiringResponse {
  string  airing_json = 1;
}
